[package]
name = "da_viewer"
version = "1.0.0"
authors = ["evilDAVE <aymanfarsi99gmail.com>"]
edition = "2021"
rust-version = "1.65"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.22.0"
eframe = { version = "0.22.0", default-features = false, features = [
    "default_fonts",
    "glow",
] }
log = "0.4"
polars = { version = "0.31.1", features = ["lazy", "csv", "parquet", "json"] }
egui_extras = "0.22.0"
tokio = { version = "1.28.2", features = ["sync", "rt", "rt-multi-thread"] }
rfd = "0.11.4"
directories = "5.0.1"
catppuccin-egui = "3.0.0"
egui-phosphor = "0.2.0"
calamine = "0.21.2"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[target.'cfg(windows)'.build-dependencies]
# winres = "0.1.12"
winresource = "0.1" # https://github.com/BenjaminRi/winresource

[package.metadata.winresource]
OriginalFilename = "DAV.EXE"

[profile.release]
# opt-level = 2 # fast and small wasm
# opt-level = "z"
# strip = true
# lto = true
# codegen-units = 1
# panic = "abort"

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[package.metadata.scripts]
run = "cargo build -r ; ./target/release/da_viewer.exe"
build = "cargo build -r"
# trunk = "trunk serve"
# buld_mac = "cargo zigbuild -r --target universal2-apple-darwin"
